refactoring to use akka-persistence